[gd_scene load_steps=5 format=3 uid="uid://by8xwkq2t0hcr"]

[ext_resource type="Script" path="res://scenes/interface_base/battlesim/jungle_basic/jungle_basic.gd" id="1_c0qci"]
[ext_resource type="PackedScene" uid="uid://bsqfqqlswcbnk" path="res://scenes/interface_base/battlesim/utility/health_bar/health_bar.tscn" id="1_i4av5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5f1ja"]
radius = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_rxtvw"]
radius = 50.0

[node name="JungleBasic" type="CharacterBody2D" groups=["jungle"]]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_c0qci")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5f1ja")

[node name="AttackRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 24

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_rxtvw")

[node name="HealthBar" parent="." instance=ExtResource("1_i4av5")]
unique_name_in_owner = true

[node name="AttTimer" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="died" from="HealthBar" to="." method="_on_health_bar_died"]
[connection signal="timeout" from="AttTimer" to="." method="_on_att_timer_timeout"]
